WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265688
[WGSL] Explicit type conversion should not check for overflow
https://bugs.webkit.org/show_bug.cgi?id=265688
Summary
[WGSL] Explicit type conversion should not check for overflow
Tadeu Zagallo
Reported
2023-12-01 12:08:20 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-01 12:08:30 PST
<
rdar://problem/119044778
>
Tadeu Zagallo
Comment 2
2023-12-01 12:11:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21176
EWS
Comment 3
2023-12-04 12:26:07 PST
Committed
271499@main
(f0f4573a7ded): <
https://commits.webkit.org/271499@main
> Reviewed commits have been landed. Closing PR #21176 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug