[WGSL] Explicit type conversion should not check for overflow https://bugs.webkit.org/show_bug.cgi?id=265688 rdar://119044778

Reviewed by Mike Wyrzykowski.

When converting values to a different type (e.g. u32(i32)), we should not perform
the same overflow checks as when a type is implicitly converted (e.g. from AbstractInt
to i32).

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::convertValue):
(WGSL::constantConstructor):
(WGSL::constantVector):
(WGSL::constantMatrix):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::chooseOverload):
(WGSL::TypeChecker::convertValue):
* Source/WebGPU/WGSL/tests/valid/overload.wgsl:

Canonical link: https://commits.webkit.org/271499@main