Source/WebGPU/WGSL/TypeCheck.cpp
@@ -140,7 +140,7 @@ private:
     bool isBottom(const Type*) const;
     void introduceType(const AST::Identifier&, const Type*);
     void introduceValue(const AST::Identifier&, const Type*, std::optional<ConstantValue> = std::nullopt);
-    bool convertValue(const SourceSpan&, const Type*, ConstantValue&, bool explicitConversion = false);
+    bool convertValue(const SourceSpan&, const Type*, ConstantValue&);
 
     template<typename TargetConstructor, typename... Arguments>
     void allocateSimpleConstructor(ASCIILiteral, TargetConstructor, Arguments&&...);
@@ -1412,38 +1412,29 @@ const Type* TypeChecker::chooseOverload(const char* kind, AST::Expression& expre
             callArguments[i].m_inferredType = overload->parameters[i];
         inferred(overload->result);
 
-        bool isConstructor = false;
         if (it->value.kind == OverloadedDeclaration::Constructor && is<AST::CallExpression>(expression)) {
             auto& call = downcast<AST::CallExpression>(expression);
             call.m_isConstructor = true;
-            isConstructor = true;
         }
 
-        if (isConstructor && callArguments.size() == 1 && callArguments[0].inferredType()->index() == overload->result->index()) {
-            auto& argument = callArguments[0];
+        unsigned argumentCount = callArguments.size();
+        FixedVector<ConstantValue> arguments(argumentCount);
+        bool isConstant = true;
+        for (unsigned i = 0; i < argumentCount; ++i) {
+            auto& argument = callArguments[i];
             auto& value = argument.m_constantValue;
-            if (value.has_value() && convertValue(argument.span(), overload->result, *value, true))
-                setConstantValue(expression, *value);
-        } else {
-            unsigned argumentCount = callArguments.size();
-            FixedVector<ConstantValue> arguments(argumentCount);
-            bool isConstant = true;
-            for (unsigned i = 0; i < argumentCount; ++i) {
-                auto& argument = callArguments[i];
-                auto& value = argument.m_constantValue;
-                if (!value.has_value() || !convertValue(argument.span(), argument.inferredType(), *value))
-                    isConstant = false;
-                else
-                    arguments[i] = *value;
-            }
+            if (!value.has_value() || !convertValue(argument.span(), argument.inferredType(), *value))
+                isConstant = false;
+            else
+                arguments[i] = *value;
+        }
 
-            if (auto constantFunction = it->value.constantFunction; isConstant && constantFunction) {
-                auto result = constantFunction(overload->result, WTFMove(arguments));
-                if (!result)
-                    typeError(InferBottom::No, expression.span(), result.error());
-                else if (convertValue(expression.span(), overload->result, *result))
-                    setConstantValue(expression, WTFMove(*result));
-            }
+        if (auto constantFunction = it->value.constantFunction; isConstant && constantFunction) {
+            auto result = constantFunction(overload->result, WTFMove(arguments));
+            if (!result)
+                typeError(InferBottom::No, expression.span(), result.error());
+            else if (convertValue(expression.span(), overload->result, *result))
+                setConstantValue(expression, WTFMove(*result));
         }
 
         return overload->result;
@@ -1550,7 +1541,7 @@ void TypeChecker::introduceType(const AST::Identifier& name, const Type* type)
         typeError(InferBottom::No, name.span(), "redeclaration of '", name, "'");
 }
 
-bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, ConstantValue& value, bool explicitConversion)
+bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, ConstantValue& value)
 {
     if (shouldDumpConstantValues) {
         StringPrintStream valueString;
@@ -1570,20 +1561,6 @@ bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, Constan
                     result = convertFloat<float>(*abstractFloat);
                 else if (auto* abstractInt = std::get_if<int64_t>(&value))
                     result = convertFloat<float>(static_cast<double>(*abstractInt));
-                else {
-                    RELEASE_ASSERT(explicitConversion);
-
-                    if (auto* boolean = std::get_if<bool>(&value))
-                        result = convertFloat<float>(static_cast<double>(*boolean));
-                    else if (auto* i32 = std::get_if<int32_t>(&value))
-                        result = convertFloat<float>(static_cast<double>(*i32));
-                    else if (auto* u32 = std::get_if<uint32_t>(&value))
-                        result = convertFloat<float>(static_cast<double>(*u32));
-                    else if (auto* f16 = std::get_if<half>(&value))
-                        result = convertFloat<float>(*f16);
-                    else
-                        RELEASE_ASSERT_NOT_REACHED();
-                }
 
                 if (!result.has_value())
                     return Failed;
@@ -1598,20 +1575,6 @@ bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, Constan
                     result = convertFloat<half>(*abstractFloat);
                 else if (auto* abstractInt = std::get_if<int64_t>(&value))
                     result = convertFloat<half>(static_cast<double>(*abstractInt));
-                else {
-                    RELEASE_ASSERT(explicitConversion);
-
-                    if (auto* boolean = std::get_if<bool>(&value))
-                        result = convertFloat<half>(static_cast<double>(*boolean));
-                    else if (auto* i32 = std::get_if<int32_t>(&value))
-                        result = convertFloat<half>(static_cast<double>(*i32));
-                    else if (auto* u32 = std::get_if<uint32_t>(&value))
-                        result = convertFloat<half>(static_cast<double>(*u32));
-                    else if (auto* f32 = std::get_if<float>(&value))
-                        result = convertFloat<half>(*f32);
-                    else
-                        RELEASE_ASSERT_NOT_REACHED();
-                }
 
                 if (!result.has_value())
                     return Failed;
@@ -1624,22 +1587,7 @@ bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, Constan
                 std::optional<int32_t> result;
                 if (auto* abstractInt = std::get_if<int64_t>(&value))
                     result = convertInteger<int32_t>(*abstractInt);
-                else {
-                    RELEASE_ASSERT(explicitConversion);
 
-                    if (auto* u32 = std::get_if<uint32_t>(&value))
-                        result = convertInteger<int32_t>(*u32);
-                    else if (auto* boolean = std::get_if<bool>(&value))
-                        result = static_cast<int32_t>(*boolean);
-                    else if (auto* f32 = std::get_if<float>(&value))
-                        result = convertInteger<int32_t>(static_cast<int64_t>(*f32));
-                    else if (auto* f16 = std::get_if<half>(&value))
-                        result = convertInteger<int32_t>(*f16);
-                    else if (auto* abstractFloat = std::get_if<double>(&value))
-                        result = convertInteger<int32_t>(static_cast<int64_t>(*abstractFloat));
-                    else
-                        RELEASE_ASSERT_NOT_REACHED();
-                }
                 if (!result.has_value())
                     return Failed;
                 value = { *result };
@@ -1651,41 +1599,16 @@ bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, Constan
                 std::optional<uint32_t> result;
                 if (auto* abstractInt = std::get_if<int64_t>(&value))
                     result = convertInteger<uint32_t>(*abstractInt);
-                else {
-                    RELEASE_ASSERT(explicitConversion);
 
-                    if (auto* i32 = std::get_if<int32_t>(&value))
-                        result = convertInteger<uint32_t>(*i32);
-                    else if (auto* boolean = std::get_if<bool>(&value))
-                        result = static_cast<uint32_t>(*boolean);
-                    else if (auto* f32 = std::get_if<float>(&value))
-                        result = convertInteger<uint32_t>(static_cast<int64_t>(*f32));
-                    else if (auto* f16 = std::get_if<half>(&value))
-                        result = convertInteger<uint32_t>(*f16);
-                    else if (auto* abstractFloat = std::get_if<double>(&value))
-                        result = convertInteger<uint32_t>(static_cast<int64_t>(*abstractFloat));
-                    else
-                        RELEASE_ASSERT_NOT_REACHED();
-                }
                 if (!result.has_value())
                     return Failed;
                 value = { *result };
                 return Success;
             }
             case Types::Primitive::AbstractInt:
-                // We might get an "explicit" conversion for things like vec2(vec2(0)),
-                // where the source and target types are the same. Otherwise, it should
-                // be impossible to force a conversion to from any other type to
-                // an abstract type
                 ASSERT(std::holds_alternative<int64_t>(value));
                 return Success;
             case Types::Primitive::AbstractFloat: {
-                // We might get an "explicit" conversion for things like vec2(vec2(0.0)),
-                // where the source and target types are the same. Otherwise, it should
-                // be impossible to force a conversion to from any other type to
-                // an abstract type
-                ASSERT(!explicitConversion || std::holds_alternative<double>(value));
-
                 std::optional<double> result;
                 if (auto* abstractFloat = std::get_if<double>(&value))
                     result = convertFloat<double>(*abstractFloat);
@@ -1699,27 +1622,7 @@ bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, Constan
                 return Success;
             }
             case Types::Primitive::Bool:
-                if (std::holds_alternative<bool>(value))
-                    return Success;
-
-                bool result;
-                RELEASE_ASSERT(explicitConversion);
-
-                if (auto* i32 = std::get_if<int32_t>(&value))
-                    result = static_cast<bool>(*i32);
-                else if (auto* u32 = std::get_if<uint32_t>(&value))
-                    result = static_cast<bool>(*u32);
-                else if (auto* abstractInt = std::get_if<int64_t>(&value))
-                    result = static_cast<bool>(*abstractInt);
-                else if (auto* f32 = std::get_if<float>(&value))
-                    result = static_cast<bool>(*f32);
-                    else if (auto* f16 = std::get_if<half>(&value))
-                        result = static_cast<bool>(*f16);
-                else if (auto* abstractFloat = std::get_if<double>(&value))
-                    result = static_cast<bool>(*abstractFloat);
-                else
-                    RELEASE_ASSERT_NOT_REACHED();
-                value = { result };
+                RELEASE_ASSERT(std::holds_alternative<bool>(value));
                 return Success;
             case Types::Primitive::Void:
             case Types::Primitive::Sampler:
@@ -1735,7 +1638,7 @@ bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, Constan
             ASSERT(value.isVector());
             auto& vector = std::get<ConstantVector>(value);
             for (auto& element : vector.elements) {
-                if (!convertValue(span, vectorType.element, element, explicitConversion))
+                if (!convertValue(span, vectorType.element, element))
                     return FailedInner;
             }
             return Success;
@@ -1744,7 +1647,7 @@ bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, Constan
             ASSERT(value.isMatrix());
             auto& matrix = std::get<ConstantMatrix>(value);
             for (auto& element : matrix.elements) {
-                if (!convertValue(span, matrixType.element, element, explicitConversion))
+                if (!convertValue(span, matrixType.element, element))
                     return FailedInner;
             }
             return Success;
@@ -1753,7 +1656,7 @@ bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, Constan
             ASSERT(value.isArray());
             auto& array = std::get<ConstantArray>(value);
             for (auto& element : array.elements) {
-                if (!convertValue(span, arrayType.element, element, explicitConversion))
+                if (!convertValue(span, arrayType.element, element))
                     return FailedInner;
             }
             return Success;
@@ -1769,7 +1672,7 @@ bool TypeChecker::convertValue(const SourceSpan& span, const Type* type, Constan
                 auto* key = keys.tryGet(entry.key);
                 RELEASE_ASSERT(key);
                 auto* type = primitiveStruct.values[*key];
-                if (!convertValue(span, type, entry.value, explicitConversion))
+                if (!convertValue(span, type, entry.value))
                     return FailedInner;
             }
             return Success;
